# exemple-oscar-stripe

./: README.md  db.sqlite3  env.exemple  pyproject.toml
checkout/: apps.py
checkout/templates/checkout/: paymant_details.html  preview.html
config/: settings.py  urls.py
whoosh_index/: MAIN_9x2l3ysnlewgxk27.seg  MAIN_gkq1dvnl8trxdog3.seg  MAIN_iplzkw0oj4k83qbw.seg  _MAIN_8.toc
